--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -9,13 +9,12 @@
         "COPYAUTHOR": "Cédric Rochefolle",
         "WEBSITE_TITLE": "Narok",
         "WEBSITE_SUBTITLE": "Web-Security and hacking...",
-        "COMINGSOON": "Coming soon..."
+        "LOREMIPSUM": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies ut augue eu imperdiet. Donec tincidunt congue tortor, eu finibus ex facilisis ut. Etiam aliquam augue non magna commodo auctor. Phasellus nec tellus egestas, gravida ipsum nec, semper augue. In facilisis quam purus, congue egestas augue gravida at. Aenean et justo placerat, ultrices nisi sit amet, molestie risus. Duis eu nulla eget nisi interdum interdum. Curabitur ornare vel odio rhoncus aliquet. Praesent luctus rutrum pharetra. Nullam sed eros pharetra urna porttitor viverra. Nulla facilisi. Sed molestie sodales rhoncus. Cras gravida porttitor nulla ac suscipit. Suspendisse sed neque nunc. Praesent ac varius nisi. Donec suscipit elit sit amet eros scelerisque tempor. Curabitur bibendum turpis id rhoncus ultricies. Maecenas hendrerit finibus felis, ac lobortis ex vestibulum sit amet. Donec condimentum aliquet nulla, sed scelerisque orci. Phasellus massa felis, maximus eget dolor ut, dapibus semper ante. Cras non neque lectus. Suspendisse nec erat nec nulla pretium ultricies."
     },
     "fr_FR": {
         "SIGNIN": "Connexion",
         "SIGNOUT": "Deconnexion",
         "COPYRIGHT": "Droits d'auteur",
-        "WEBSITE_SUBTITLE": "Sécurité web et hacking...",
-        "COMINGSOON": "Bientôt disponible..."
+        "WEBSITE_SUBTITLE": "Sécurité web et hacking..."
     }
 }
