--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -13,7 +13,10 @@
         "CODEHOSTED": "Code hosted in ",
         "BUILTWITH": "Built with",
         "COVERAGE": "Coverage at",
-        "CONTAINER": "Container in"
+        "CONTAINER": "Container in",
+        "FROMOWNER": "By",
+        "EDIT": "Edit",
+        "BACK": "Back"
     },
     "fr_FR": {
         "SIGNIN": "Connexion",
@@ -24,6 +27,9 @@
         "CODEHOSTED": "Code hébergé à",
         "BUILTWITH": "Compilé sur",
         "COVERAGE": "Couverture du code à",
-        "CONTAINER": "Container à"
+        "CONTAINER": "Container à",
+        "FROMOWNER": "De",
+        "EDIT": "Modifier",
+        "BACK": "Retour"
     }
 }
