Make title editable

--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -20,6 +20,7 @@
         "BACK": "Back",
         "BOLDTEXT": "Bold",
         "ITALICTEXT": "Italic",
+        "STRIKETHROUGHTEXT": "Strike Through",
         "DECREASETEXT": "Decrease font size",
         "INCREASETEXT": "Increase font size",
         "ORDEREDLISTTEXT": "Ordered list",
@@ -45,6 +46,7 @@
         "BACK": "Retour",
         "BOLDTEXT": "Gras",
         "ITALICTEXT": "Italique",
+        "STRIKETHROUGHTEXT": "Barré",
         "DECREASETEXT": "Diminue la taille de la police",
         "INCREASETEXT": "Augmente la taille de la police",
         "ORDEREDLISTTEXT": "Liste numeroté",
