Fix HTML and title.

--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -10,6 +10,7 @@
         "WEBSITE_TITLE": "Narok",
         "WEBSITE_SUBTITLE": "Web-Security and hacking...",
         "NORESULT": "No result found.",
+        "CONTENTMODIDIED": "Modified on ",
         "CODEHOSTED": "Code hosted in ",
         "BUILTWITH": "Built with",
         "COVERAGE": "Coverage at",
@@ -36,6 +37,7 @@
         "COPYRIGHT": "Droits d'auteur",
         "WEBSITE_SUBTITLE": "Sécurité web et hacking...",
         "NORESULT": "Pas de résultat trouvé.",
+        "CONTENTMODIDIED": "Modifié le ",
         "CODEHOSTED": "Code hébergé à",
         "BUILTWITH": "Compilé sur",
         "COVERAGE": "Couverture du code à",
