--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -18,6 +18,7 @@
         "FROMOWNER": "By",
         "EDIT": "Edit",
         "SAVE": "Save",
+        "NEWARTICLE": "New article",
         "BACK": "Back",
         "BOLDTEXT": "Bold",
         "ITALICTEXT": "Italic",
@@ -45,6 +46,7 @@
         "FROMOWNER": "De",
         "EDIT": "Modifier",
         "SAVE": "Enregistrer",
+        "NEWARTICLE": "Nouvel article",
         "BACK": "Retour",
         "BOLDTEXT": "Gras",
         "ITALICTEXT": "Italique",
