Add support to add a blog content

--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -18,6 +18,7 @@
         "FROMOWNER": "By",
         "EDIT": "Edit",
         "SAVE": "Save",
+        "ADDBLOGCONTENT": "Add text content",
         "NEWARTICLE": "New article",
         "BACK": "Back",
         "BOLDTEXT": "Bold",
@@ -46,6 +47,7 @@
         "FROMOWNER": "De",
         "EDIT": "Modifier",
         "SAVE": "Enregistrer",
+        "ADDBLOGCONTENT": "Ajouter un paragraphe",
         "NEWARTICLE": "Nouvel article",
         "BACK": "Retour",
         "BOLDTEXT": "Gras",
