--- a/fe/src/services/i18n/cms.json
+++ b/fe/src/services/i18n/cms.json
@@ -22,6 +22,8 @@
         "ADDBLOGCONTENT": "Add text content",
         "NEWARTICLE": "New article",
         "BACK": "Back",
+        "NEXTPAGE": "Next Page",
+        "PREVIOUSPAGE": "Previous Page",
         "BOLDTEXT": "Bold",
         "ITALICTEXT": "Italic",
         "STRIKETHROUGHTEXT": "Strike Through",
@@ -37,7 +39,7 @@
     },
     "fr_FR": {
         "SIGNIN": "Connexion",
-        "SIGNOUT": "Deconnexion",
+        "SIGNOUT": "Déconnexion",
         "COPYRIGHT": "Droits d'auteur",
         "WEBSITE_SUBTITLE": "Sécurité web et hacking...",
         "NORESULT": "Pas de résultat trouvé.",
@@ -53,6 +55,8 @@
         "ADDBLOGCONTENT": "Ajouter un paragraphe",
         "NEWARTICLE": "Nouvel article",
         "BACK": "Retour",
+        "NEXTPAGE": "Page suivante",
+        "PREVIOUSPAGE": "Page précédente",
         "BOLDTEXT": "Gras",
         "ITALICTEXT": "Italique",
         "STRIKETHROUGHTEXT": "Barré",
